Improved dependency injection for ViewModels
- Improved definitions of ViewModels dependency injection modules where error return protocol instance for UI is created
- Good practice improvements
- Removing unused code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <!-- region ERRORS -->
     <string name="error_service_generic_response">Tente novamente mais tarde</string>
+    <string name="error_empty_list_movies">Filme não encontrado</string>
+    <string name="error_empty_favorite_movies">Favorito não encontrado</string>
     <!-- endregion -->
 
     <!-- region Toolbar -->
